@@ -92,8 +92,10 @@ st.calendar.background_selected1=#c8c8f0
 st.calendar.background_selected2=#a8a8c8
 st.calendar.background_selected_border=#787898
 st.calendar.foreground=#000000
+st.calendar.foreground_today=#1850d8
 st.calendar.foreground_outside=#c0c0c0
 st.calendar.foreground_sunday=#c00000
+st.calendar.foreground_sunday_today=#f82000
 st.calendar.foreground_sunday_outside=#c07070
 st.calendar.foreground.note=#505050
 st.calendar.foreground.weight=#505050
