@@ -13,6 +13,9 @@ v5.6.0:
     is installed.
   - Overview Dialog: improved weight graph (SF feature request #3554633):
     Missing weight values will be interpolated instead of set to 0.
+  - Calendar View: (SF feature request #3082257):
+    current day is better recognizable by using a different color (blue for
+    weekdays, red/orange for sundays)
  ExerciseViewer changes:
   - Garmin TCX Parser: Fix for SourceForge-Bug #3551583 
     (Fail to parse tcx files with laps without altitude)
